security: add JWT re-validation to proctoring/reporting and fix CORS wildcard in assessment
- Proctoring and reporting services were relying only on the API gateway
  for auth (permitAll() internally). Added a OncePerRequestFilter that
  re-validates the JWT in the Authorization header and requires auth for
  all /api/v1/proctoring/** and /api/v1/reporting/** endpoints. Actuator
  and WebSocket paths remain permitAll().
- Fixed CORS misconfiguration in assessment-service: replaced wildcard
  origin with allowCredentials(true) with a configurable allowed-origins
  allowlist (SECURECODE_CORS_ALLOWED_ORIGINS).
- Added securecode.cors.allowed-origins property to assessment-service
  application.yml.

This is a defense-in-depth hardening step; the NetworkPolicies added
earlier enforce the gateway as the only external ingress path, and these
filters protect against lateral movement if those controls are bypassed.